<resources>
    <string name="app_name">Lost and Found</string>
    <string name="cari_barang">Cari barang</string>
    <string name="kategori">Kategori</string>
    <string name="location_pin_button">location pin button</string>
    <string name="filter_button">filter button</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="terbaru">Terbaru</string>
    <string name="login">Login</string>
    <string name="sign_up_with_email_or_phone">Sign up with email or phone</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="atau">Atau</string>
    <string name="temukan_barangmu_yang_ketinggalan_ndi_stasiun_kereta">Temukan barangmu yang ketinggalan \ndi stasiun kereta!</string>
    <string name="welcome_to_l_amp_f"><![CDATA[Welcome to L&F]]></string>
    <string name="logo">logo</string>
    <string name="back">back</string>
    <string name="enter_your_email_and_password_for_nsigning_in_thanks">Enter your email and password for \nsigning in. Thanks</string>
    <string name="email_no_telephone">Email/No. Telephone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="welcome_to_home">Welcome To Home</string>
    <string name="i_agree_with_terms_amp_privacy_police"><![CDATA[I Agree with Terms & Privacy Police]]></string>
    <string name="home">Home</string>
    <string name="lapor">Lapor</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="item_barang_hilang">item barang hilang</string>
    <string name="status_barang">status barang</string>
    <string name="send_it_again_r">send_it_again_r</string>
    <string name="did_n_get_the_code">did_n_get_the_code</string>
    <string name="enter_the_one_time_password_sent_to">enter_the_one_time_password_sent_to</string>
    <string name="verify_your_number">verify_your_number</string>
    <string name="unhandled_error">Unhandled Error</string>
    <string name="edit">edit</string>
    <string name="apply">apply</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="image">image</string>
    <string name="change">Edit Profile</string>
    <string name="ganti_foto_profile">Ganti Foto Profile</string>
</resources>